Fix dark mode toggle button display issue
- Exclude theme-toggle from absolute positioning of hamburger menu
- Change toggle button to inline-flex for proper inline display
- Add vertical-align middle to align with navigation items

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -189,7 +189,7 @@
     }
   }
 
-  button {
+  button:not(.theme-toggle) {
     position: absolute;
     height: 100%;
     right: 0;
@@ -315,9 +315,10 @@
 
 .theme-toggle {
   position: relative;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
+  vertical-align: middle;
   width: 40px;
   height: 40px;
   margin-left: 10px;
